clang/test/BSC/Negative/Ownership/RuleCheck/owned-struct-private-member-init.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

owned struct D{
    int a ;
    public:
    D init_a(){
      D d ={2};
     return d;
    }
      D init_a1();
};

D D::init_a1(){
  D d ={2};
 return d;
}
struct C{
    int x;
};

owned struct C init_a(){ // expected-error {{type of 'struct C' cannot be qualified by 'owned'}}
   owned struct C c ={2}; // expected-error {{type of 'struct C' cannot be qualified by 'owned'}}
   c.x= 2;
   return c;
}

int main() {
    D x = D::init_a();
    D x2 =D::init_a1();
    return 0;
}